Update Team Members “05-07-18-”

--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -3,7 +3,7 @@ team: Board of directors
 isDirectorsBoard: true
 head:
   name: Hamada
-  image: /img/7baa252dbdfeed669c152bedd2fa5feb.jpg
+  image: /img/img_6129.jpg
 members:
   - name: hamada
     role: Director
