Update Team Members “06-14-35-”

--- a/v1/content/team-members/06-14-35-.md
+++ b/v1/content/team-members/06-14-35-.md
@@ -10,25 +10,4 @@ head:
 ---
 **Cairo University Eco Racing Team - Engine Sub Team**
 
-Ignite the future of eco-friendly racing with the Engine Sub Team at Cairo University Eco Racing. Our team is dedicated to pushing the boundaries of efficiency and performance in sustainable propulsion, crafting an engine that powers our racing machine with precision and minimal environmental impact.
-
-**Mission:**
-Our mission is to revolutionize eco-friendly racing by designing an engine that maximizes power output while minimizing emissions and energy consumption.
-
-**Expertise:**
-Led by a team of passionate engineers, we specialize in internal combustion engines, hybrid systems, alternative fuels, and advanced engine control technologies.
-
-**Key Responsibilities:**
-
-1. *Internal Combustion Innovation:* Designing high-efficiency internal combustion engines that deliver optimal power for eco-friendly racing.
-2. *Hybrid Systems Integration:* Implementing cutting-edge hybrid systems to seamlessly combine conventional and alternative power sources, enhancing overall performance.
-3. *Alternative Fuels Exploration:* Exploring and incorporating sustainable and alternative fuels to reduce environmental impact and promote greener racing.
-4. *Advanced Engine Control:* Developing and integrating sophisticated engine control technologies to optimize fuel injection, ignition, and overall engine performance.
-
-**Innovation Hub:**
-Collaborating seamlessly with other sub-teams, we integrate our engine solutions to create a high-performance, environmentally conscious eco-racing machine.
-
-**Beyond the Track:**
-Our commitment extends beyond racing as we actively engage in educational initiatives and community outreach, sharing our passion for innovative and sustainable engine design.
-
-Join us on the road to pioneering engineering, where the Engine Sub Team at Cairo University Eco Racing Team is redefining the power behind eco-friendly racing vehicles. Experience the thrill of sustainable speed with our cutting-edge engine technology!
+At the forefront of power and innovation, the Engine Sub Team at Cairo University Eco Racing is the driving force propelling our eco-friendly racing vision. Specializing in internal combustion engines, hybrid systems, alternative fuels, and advanced engine control technologies, our team is dedicated to designing a powerhouse that not only maximizes speed and performance but also minimizes emissions and energy consumption. With a commitment to pioneering engineering, we're shaping the heart of our racing machine to not just compete but to lead in the realm of sustainable motorsports.
