Update Team Members “06-14-21-”

--- a/v1/content/team-members/06-14-21-.md
+++ b/v1/content/team-members/06-14-21-.md
@@ -11,23 +11,4 @@ members: []
 ---
 **Cairo University Eco Racing Team - Vehicle Dynamics Sub Team**
 
-Welcome to the beating heart of our innovation—the Vehicle Dynamics Sub Team at Cairo University Eco Racing. Committed to pushing the limits of eco-friendly racing, our engineers focus on perfecting the dynamic performance of our vehicle.
-
-**Mission:**
-Revolutionizing sustainable racing, we aim for the perfect balance between speed, efficiency, and safety.
-
-**Expertise:**
-Our passionate team specializes in aerodynamics, suspension design, tire dynamics, and vehicle control systems.
-
-**Key Responsibilities:**
-
-1. *Aerodynamics:* Minimizing drag, maximizing efficiency.
-2. *Suspension Design:* Balancing stability and responsiveness.
-3. *Tire Dynamics:* Optimizing traction, efficiency, and durability.
-4. *Vehicle Control Systems:* Fine-tuning energy consumption for unparalleled racing.
-
-**Innovation Hub:**
-Collaborating seamlessly with other teams, we integrate solutions for a cohesive, cutting-edge design.
-
-**Beyond the Track:**
-Our commitment extends to education and community outreach, inspiring the next generation of sustainable innovators.
+Embarking on the science of motion, the Vehicle Dynamics Sub Team at Cairo University Eco Racing is the engineering backbone that defines the agility and efficiency of our eco-friendly racing machine. Specializing in aerodynamics, suspension design, tire dynamics, and vehicle control systems, our team is on a mission to strike the perfect balance between speed, stability, and sustainability. From crafting aerodynamic profiles that cut through the wind with precision to fine-tuning suspension systems for optimal performance on the track, we are at the forefront of redefining the dynamic behavior of our eco-racing vehicle.
