Update Team Members “06-14-33-”

--- a/v1/content/team-members/06-14-33-.md
+++ b/v1/content/team-members/06-14-33-.md
@@ -10,25 +10,4 @@ head:
 ---
 **Cairo University Eco Racing Team - Power Transmission Sub Team**
 
-Step into the powerhouse of our eco-friendly racing initiative—the Power Transmission Sub Team at Cairo University Eco Racing. We are the driving force behind optimizing energy transfer and efficiency, ensuring that every bit of power generated contributes to a sustainable and high-performance racing experience.
-
-**Mission:**
-Our mission is clear—to revolutionize power transmission in eco-friendly vehicles, maximizing efficiency and performance while minimizing environmental impact.
-
-**Expertise:**
-Led by a team of dedicated engineers, we specialize in powertrain design, drivetrain efficiency, energy storage, and electrical systems.
-
-**Key Responsibilities:**
-
-1. *Powertrain Design:* Crafting an innovative powertrain system to efficiently convert energy into motion, optimizing for speed and endurance.
-2. *Drivetrain Efficiency:* Maximizing the efficiency of energy transfer from the power source to the wheels, reducing energy loss and enhancing overall performance.
-3. *Energy Storage Solutions:* Implementing cutting-edge energy storage technologies to capture, store, and deploy power strategically throughout the race.
-4. *Electrical Systems:* Designing and integrating advanced electrical systems to manage and distribute power effectively, ensuring smooth and responsive operation.
-
-**Innovation Hub:**
-Collaborating seamlessly with other sub-teams, we integrate our power transmission solutions to create a cohesive and high-performing eco-racing machine.
-
-**Beyond the Track:**
-Our commitment extends beyond racing as we actively engage in educational initiatives and community outreach, sharing our expertise and passion for sustainable power transmission.
-
-Join us on the fast track to innovation, where the Power Transmission Sub Team at Cairo University Eco Racing Team is redefining the dynamics of energy transfer in eco-friendly racing. Unleash the power of sustainability with us!
+Empowering the wheels of progress, the Power Transmission Sub Team at Cairo University Eco Racing is the mastermind behind optimizing energy transfer and efficiency in our eco-friendly racing machine. Specializing in powertrain design, drivetrain efficiency, energy storage, and electrical systems, our team ensures that every iota of power contributes to a sustainable and high-performance racing experience. From crafting innovative powertrains for speed and endurance to implementing cutting-edge energy storage solutions, we are dedicated to revolutionizing the dynamics of power transmission in the world of eco-friendly racing.
