Update Team Members “05-07-18-”

--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -1,12 +1,11 @@
 ---
-team: Board of directors
+team: Team Manager
 isDirectorsBoard: true
 head:
-  name: Hamada
-  image: /img/img_6129.jpg
-members:
-  - name: hamada
-    role: Director
-    image: /img/unknown.png
+  name: Alaa Ragab Sobhy
+  image: /img/alaa-ragab2.jpeg
+  email: cairo.university.eco.racing.team@gmail.com
+  linkedin: https://www.linkedin.com/in/alaa-ragab-sobhy-794456222/
+members: []
 ---
 directors
