Update Team Members “05-07-18-”

--- a/v1/content/team-members/05-07-18-.md
+++ b/v1/content/team-members/05-07-18-.md
@@ -6,6 +6,32 @@ head:
   image: /img/alaa-ragab2.jpeg
   email: cairo.university.eco.racing.team@gmail.com
   linkedin: https://www.linkedin.com/in/alaa-ragab-sobhy-794456222/
-members: []
+members:
+  - name: Mohamed Salem
+    role: Director
+    image: /img/mohamed-salem-1-.jpg
+    email: ---
+  - name: Omar Mohsen
+    role: Director
+    email: Omarmohsen2014@gmail.comOmarmohsen2014@gmail.com
+    image: /img/omar-mohsen-1-.jpg
+  - name: "Eman Ayman Yosry "
+    role: Director
+    email: emanaymanmm@gmail.com
+    linkedin: www.linkedin.com/in/eman-ayman-32a777254
+    facebook: https://www.facebook.com/emanaymanmm/
+    github: https://github.com/emanaymanmm
+    image: /img/1666732389736-eman-ayman.jfif
+  - name: Mohamed Abdelhakim Mostafa
+    image: /img/img_0440-mohamed-abdelhakim.jpg
+    role: Director
+    email: Mohameda.hakim01@gmail.com
+    linkedin: https://www.linkedin.com/in/mohameda-hakim?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+    facebook: https://www.facebook.com/MohamedHakim01?mibextid=LQQJ4d
+  - name: "Sayed Sayed Mohamed "
+    image: /img/personal-photo-sayed-sayed.jpg
+    role: Director
+    email: sayedsayed200362@gmail.com
+    linkedin: https://www.linkedin.com/in/sayed-sayed-mohamed-ab1008260/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
 ---
 directors
