Update Team Members “06-14-55-”

--- a/v1/content/team-members/06-14-55-.md
+++ b/v1/content/team-members/06-14-55-.md
@@ -6,6 +6,12 @@ head:
   email: belal.e.hamed@gmail.com
   linkedin: linkedin.com/in/belal-ibrahem-406403253
   image: /img/img_20231112_232206-belal-ebrahem-1-.jpg
+members:
+  - name: Abdelrahman Ali Fadl
+    image: /img/whatsapp-image-2023-10-22-at-12.40.30-am-abdo-ali.jpeg
+    role: Member
+    email: abdoalifadl2@gmail.com
+    linkedin: https://www.linkedin.com/in/abdelrahman-ali02
 ---
 **Cairo University Eco Racing Team - Operations & Manufacturing Sub Team**
 
