--- a/v1/content/team-members/06-15-02-.md
+++ b/v1/content/team-members/06-15-02-.md
@@ -7,6 +7,11 @@ head:
   email: georgeayman50@gmail.com
   linkedin: https://www.linkedin.com/in/george-ayman-291299209/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
   facebook: https://www.facebook.com/george.ayman.18?mibextid=9R9pXO
+members:
+  - name: https://drive.google.com/open?id=1kRhvw8YHu8rTm4QTdxrZGlnFCaxe02mO
+    image: /img/a45d3f21-496c-4258-a35e-0d848cae6058-cyrell-boules.jpeg
+    role: Member
+    email: Cyrell.edward123@outlook.com
 ---
 **Cairo University Eco Racing Team - Communication and Public Relations Sub Teams**
 
