Update Team Members “06-14-46-”

--- a/v1/content/team-members/06-14-46-.md
+++ b/v1/content/team-members/06-14-46-.md
@@ -8,6 +8,13 @@ head:
   linkedin: https://www.linkedin.com/in/tolba-omar/
   facebook: https://www.facebook.com/tolba.omr/
   github: https://github.com/OmarTolba004
+members:
+  - name: Abdelrahman Sanad
+    image: /img/3842e793-9e9d-47b3-8bca-d94e42650147-abdelrahman-mahmoud.jpeg
+    role: Member
+    email: abdelrahmanmahmoudsalah85@gmail.com
+    linkedin: http://linkedin.com/in/abdelrahmansalah3
+    facebook: https://www.facebook.com/Borg21?mibextid=LQQJ4d
 ---
 **Cairo University Eco Racing Team - Autonomous Embedded Systems Sub Team**
 
