Update Team Members “06-14-55-”

--- a/v1/content/team-members/06-14-55-.md
+++ b/v1/content/team-members/06-14-55-.md
@@ -12,6 +12,10 @@ members:
     role: Member
     email: abdoalifadl2@gmail.com
     linkedin: https://www.linkedin.com/in/abdelrahman-ali02
+  - name: Veronia Ehab Shafiq Riad
+    linkedin: https://www.linkedin.com/in/veronia-ehab-281a8221b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+    role: Member
+    image: /img/342218445_1354571935088539_6302549794339725346_n-veronia-riad.jpg
 ---
 **Cairo University Eco Racing Team - Operations & Manufacturing Sub Team**
 
