Update Team Members “06-14-55-”

--- a/v1/content/team-members/06-14-55-.md
+++ b/v1/content/team-members/06-14-55-.md
@@ -16,6 +16,11 @@ members:
     linkedin: https://www.linkedin.com/in/veronia-ehab-281a8221b?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
     role: Member
     image: /img/342218445_1354571935088539_6302549794339725346_n-veronia-riad.jpg
+  - name: Yousef Mohsen Mohammed Fathy
+    image: /img/1695517643590-youssef-mohamed.jpeg
+    role: Member
+    email: youssefmohsen12@gmail.com
+    linkedin: https://www.linkedin.com/in/yousef-mohsen-bbb128221/
 ---
 **Cairo University Eco Racing Team - Operations & Manufacturing Sub Team**
 
