Update Team Members “06-14-46-”

--- a/v1/content/team-members/06-14-46-.md
+++ b/v1/content/team-members/06-14-46-.md
@@ -15,6 +15,12 @@ members:
     email: abdelrahmanmahmoudsalah85@gmail.com
     linkedin: http://linkedin.com/in/abdelrahmansalah3
     facebook: https://www.facebook.com/Borg21?mibextid=LQQJ4d
+  - name: Moustafa Ahmed
+    image: /img/picsart_23-09-16_20-24-32-395-moustafa-ahmed-adel-1-.jpg
+    role: Member
+    email: moustafa.ahmed7123@gmail.com
+    linkedin: https://www.linkedin.com/in/moustafa-ahmed-364a57207/
+    facebook: https://www.facebook.com/Moustafa.Ahmed.01/
 ---
 **Cairo University Eco Racing Team - Autonomous Embedded Systems Sub Team**
 
