Update Team Members “06-15-02-”

--- a/v1/content/team-members/06-15-02-.md
+++ b/v1/content/team-members/06-15-02-.md
@@ -9,7 +9,7 @@ head:
   facebook: https://www.facebook.com/george.ayman.18?mibextid=9R9pXO
 members:
   - name: Cyrell Evan Edward
-    image: /img/a45d3f21-496c-4258-a35e-0d848cae6058-cyrell-boules.jpeg
+    image: /img/a45d3f21-496c-4258-a35e-0d848cae6058-cyrell-boules.jpg
     role: Member
     email: Cyrell.edward123@outlook.com
   - name: Moaz Mohamed Elsayed
