Update Team Members “06-15-04-”

--- a/v1/content/team-members/06-15-04-.md
+++ b/v1/content/team-members/06-15-04-.md
@@ -5,5 +5,11 @@ head:
   name: ----
   email: ----
   image: /img/apple-touch-icon.png
+members:
+  - name: "Salma Ibrahim "
+    image: /img/fr-member-salma-ibrahim.jpg
+    role: Member
+    email: salmaibrahimelsayed@gmail.com
+    linkedin: https://www.linkedin.com/in/salma-ibrahim-300410145?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
 ---
 \-﻿-
