--- a/v1/content/team-members/06-14-42-.md
+++ b/v1/content/team-members/06-14-42-.md
@@ -9,22 +9,11 @@ head:
   facebook: ""
   github: https://github.com/khaHesham
 members:
-  - name: Beshoy Morad
-    image: /img/me-beshoy-morad.jpg
+  - name: Ibrahim Mohamed
+    image: /img/screenshot_20231114_215447_gallery-ibrahim-mohamed.jpg
     role: Member
-    email: beshoymorad2002@gmail.com
-    linkedin: https://www.linkedin.com/in/beshoymorad/
-    facebook: https://www.facebook.com/iiBesh00/
-  - name: "Ali Mohammad Zayan "
-    image: /img/٢٠٢٣١١١٢_٢٢٢١٢٥-ali-esmail-1-.jpg
-    role: Member
-    email: Ali.Esmail03@eng-st.cu.edu.eg
-    linkedin: https://www.linkedin.com/in/ali-zayan-b98239264?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
-  - name: "Abdullah Sabry "
-    image: /img/screenshot_20231112-224546-abdullah-hassanein-1-.jpg
-    role: Member
-    email: abdullahsabry02@gmail.com
-    linkedin: https://www.linkedin.com/in/abdullah-sabry-8b5352221?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+    email: ibrahim.mohamed01@eng-st.cu.edu.eg
+    linkedin: https://www.linkedin.com/in/1brahimmohamed
 ---
 **Cairo University Eco Racing Team - Autonomous Development Sub Team**
 
