Update Team Members “06-14-42-”

--- a/v1/content/team-members/06-14-42-.md
+++ b/v1/content/team-members/06-14-42-.md
@@ -14,6 +14,11 @@ members:
     role: Member
     email: ibrahim.mohamed01@eng-st.cu.edu.eg
     linkedin: https://www.linkedin.com/in/1brahimmohamed
+  - name: "Mahmoud Mostafa Ahmed Ismail "
+    role: Member
+    image: /img/img_20230614_142400-1-mahmoud-ismail-1-1-.jpg
+    email: mahmoud.ismail702@eng-st.cu.edu.eg
+    linkedin: https://www.linkedin.com/in/ma7moud-mostafa
 ---
 **Cairo University Eco Racing Team - Autonomous Development Sub Team**
 
