Update Team Members “06-14-30-”

--- a/v1/content/team-members/06-14-30-.md
+++ b/v1/content/team-members/06-14-30-.md
@@ -7,7 +7,12 @@ head:
   email: "abdullah.kamel00@eng-st.cu.edu.eg "
   linkedin: https://www.linkedin.com/in/ahmed-ragab-1b4a911b5
   facebook: https://www.facebook.com/profile.php?id=100003361600722&mibextid=ZbWKwL
-members: []
+members:
+  - name: Islam amr saleh
+    image: /img/picsart_10-28-08.06.28-islam-rifai-1-.jpg
+    role: Member
+    email: "Islamamr648@gmail.com "
+    linkedin: https://www.linkedin.com/in/islamamr?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
 ---
 **Cairo University Eco Racing Team - Body and Chassis Sub Team**
 
