--- a/v1/content/team-members/06-14-42-.md
+++ b/v1/content/team-members/06-14-42-.md
@@ -19,6 +19,12 @@ members:
     image: /img/img_20230614_142400-1-mahmoud-ismail-1-1-.jpg
     email: mahmoud.ismail702@eng-st.cu.edu.eg
     linkedin: https://www.linkedin.com/in/ma7moud-mostafa
+  - name: Beshoy Morad
+    image: /img/me-beshoy-morad.jpg
+    role: Member
+    email: beshoymorad2002@gmail.com
+    linkedin: https://www.linkedin.com/in/beshoymorad/
+    facebook: https://www.facebook.com/iiBesh00/
 ---
 **Cairo University Eco Racing Team - Autonomous Development Sub Team**
 
