Update Team Members “06-15-02-”

--- a/v1/content/team-members/06-15-02-.md
+++ b/v1/content/team-members/06-15-02-.md
@@ -18,6 +18,11 @@ members:
     email: moaz78957@gmail.com
     linkedin: https://www.linkedin.com/in/moaz-mohamed-113713273
     facebook: https://web.facebook.com/
+  - name: Mostafa Abdelbary
+    image: /img/whatsapp-image-2023-11-14-at-7.50.58-pm-mostafa-abdelbary.jpg
+    role: Member
+    email: Mostafa.3bary@gmail.com
+    linkedin: https://www.linkedin.com/in/mostafa-abdelbary/
 ---
 **Cairo University Eco Racing Team - Communication and Public Relations Sub Teams**
 
