Update Team Members “06-14-57-”

--- a/v1/content/team-members/06-14-57-.md
+++ b/v1/content/team-members/06-14-57-.md
@@ -6,6 +6,12 @@ head:
   email: Mostafa12.Hesham12@gmail.comMostafa12.Hesham12@gmail.com
   linkedin: linkedin.com/in/mostafahesham00
   image: /img/img_0430-mostafa-hesham.jpg
+members:
+  - name: Ziad Ahmed Aboelkhair
+    email: ziad.aboelkhair02@gmail.com
+    role: Member
+    linkedin: https://www.linkedin.com/in/ziad-aboelkhair/
+    image: /img/photo-ziad-aboelkhair.jpg
 ---
 **Cairo University Eco Racing Team - Planning & Logistics Sub Team**
 
