Update Team Members “06-15-04-”

--- a/v1/content/team-members/06-15-04-.md
+++ b/v1/content/team-members/06-15-04-.md
@@ -11,5 +11,10 @@ members:
     role: Member
     email: salmaibrahimelsayed@gmail.com
     linkedin: https://www.linkedin.com/in/salma-ibrahim-300410145?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+  - name: Habiba Magdy Ammar
+    role: Member
+    email: habiba8.magdy@gmail.com
+    linkedin: https://www.linkedin.com/in/habiba-ammar-39a617258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+    image: /img/img-20230707-wa0010-habiba-ammar.jpg
 ---
 \-﻿-
