Update Team Members “06-14-37-”

--- a/v1/content/team-members/06-14-37-.md
+++ b/v1/content/team-members/06-14-37-.md
@@ -7,6 +7,12 @@ head:
   email: abdullah.elshamashergy@gmail.com
   linkedin: https://www.linkedin.com/in/mrshamashergy/
   facebook: https://www.facebook.com/profile.php?id=100090905708149
+members:
+  - name: "Alaa Ibrahim Awad Abdul-ghani "
+    email: alaaabdelghani2000@gmail.com
+    role: Member
+    linkedin: https://www.linkedin.com/in/alaa-ibrahim-136b40265/
+    image: /img/whatsapp-image-2023-11-12-at-10.21.05-pm-alaa-abdul-ghani.jpeg
 ---
 **Cairo University Eco Racing Team - Power Electronics Sub Team**
 
