Update Team Members “06-14-30-”

--- a/v1/content/team-members/06-14-30-.md
+++ b/v1/content/team-members/06-14-30-.md
@@ -13,6 +13,17 @@ members:
     role: Member
     email: "Islamamr648@gmail.com "
     linkedin: https://www.linkedin.com/in/islamamr?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+  - name: "Mohamed Khaled Saeed "
+    role: Member
+    email: moamedsaid450@gmail.com
+    facebook: https://www.facebook.com/profile.php?id=100010732123268&mibextid=aejMdD
+    image: /img/134939-mohammed-khaled.jpg
+  - name: Mariam Waleed Ali
+    role: Member
+    email: maremwaled5@gmail.com
+    linkedin: https://www.linkedin.com/in/mariam-al-farra-31432a190/
+    facebook: https://www.facebook.com/mariem.waled.77/
+    image: /img/1695736538622-maryam-al-farra.jpg
 ---
 **Cairo University Eco Racing Team - Body and Chassis Sub Team**
 
