--- a/v1/content/team-members/06-15-02-.md
+++ b/v1/content/team-members/06-15-02-.md
@@ -23,6 +23,15 @@ members:
     role: Member
     email: Mostafa.3bary@gmail.com
     linkedin: https://www.linkedin.com/in/mostafa-abdelbary/
+  - name: "Shahd Ebrahim "
+    role: Member
+    email: shahdmattar6@gmail.com
+    linkedin: https://www.linkedin.com/in/shahd-matter-22b159211?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+    facebook: https://www.facebook.com/shahd.mattar.3?mibextid=ZbWKwL
+    image: /img/picsart_02-01-11.58.48-shahd-mattar-1-.jpg
+  - name: Dina waleed Abd El Haleem Refay
+    role: Member
+    image: /img/img_9411-dina-refay.jpeg
 ---
 **Cairo University Eco Racing Team - Communication and Public Relations Sub Teams**
 
