Update Team Members “06-14-35-”

--- a/v1/content/team-members/06-14-35-.md
+++ b/v1/content/team-members/06-14-35-.md
@@ -7,6 +7,13 @@ head:
   email: Hamdy.osama002@gmail.com
   linkedin: https://www.linkedin.com/in/osama-hamdy-002
   facebook: https://www.facebook.com/osama602
+members:
+  - name: "Halla gamal mohamed "
+    role: Member
+    email: Hallafathy7@gmail.com
+    linkedin: http://linkedin.com/in/halla-fathy-955a99211
+    facebook: https://www.facebook.com/hala.fathy.969?mibextid=LQQJ4d
+    image: /img/c3e1bcc1-7ace-489c-965f-18fd26c6d64c-halla-fathy.jpg
 ---
 **Cairo University Eco Racing Team - Engine Sub Team**
 
