Update Team Members “06-14-33-”

--- a/v1/content/team-members/06-14-33-.md
+++ b/v1/content/team-members/06-14-33-.md
@@ -7,6 +7,13 @@ head:
   email: david.nessem03@eng-st.cu.edu.eg
   facebook: https://www.facebook.com/david.nader.902?mibextid=ZbWKwL
   linkedin: https://www.linkedin.com/in/david-nader-a540a8296/?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+members:
+  - name: "Manar Mohamed "
+    role: Member
+    email: manarmohamed3082001@gmail.com
+    linkedin: https://www.linkedin.com/in/manar-mohamed-67a629226?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+    facebook: https://www.facebook.com/profile.php?id=100009239988300&mibextid=gjUFcU
+    image: /img/img-20230831-wa0195-manar-mohamed.jpg
 ---
 **Cairo University Eco Racing Team - Power Transmission Sub Team**
 
