Update Team Members “06-14-30-”

--- a/v1/content/team-members/06-14-30-.md
+++ b/v1/content/team-members/06-14-30-.md
@@ -24,6 +24,23 @@ members:
     linkedin: https://www.linkedin.com/in/mariam-al-farra-31432a190/
     facebook: https://www.facebook.com/mariem.waled.77/
     image: /img/1695736538622-maryam-al-farra.jpg
+  - name: Omar Essam Eldin
+    image: /img/file-omar-essam-eldin.jpg
+    role: Member
+    email: omaressameldin19@gmail.com
+    linkedin: https://www.linkedin.com/in/omar-essam-eldin/
+  - name: Mostafa Hosny Mohamed
+    image: /img/20230927_123553-mostafa-hosny-1-.jpg
+    role: Member
+    email: Mostafa.Mo'wad01@std-eng.cu.edu.eg
+    linkedin: Linkedin.com/in/mostafa-hosny-387a0a1a4
+    facebook: https://www.facebook.com/mostafa.hosny.50159836?mibextid=ZbWKwL
+  - name: Mohamed Magdy
+    image: /img/mohamed-magdy-mohamed-magdy.jpg
+    role: Member
+    email: midomigo123@gmail.com
+    linkedin: https://www.linkedin.com/in/mohamed-magdy-2a3b05166
+    facebook: https://www.facebook.com/mido.sun.585/
 ---
 **Cairo University Eco Racing Team - Body and Chassis Sub Team**
 
