Update Team Members “06-14-42-”

--- a/v1/content/team-members/06-14-42-.md
+++ b/v1/content/team-members/06-14-42-.md
@@ -35,6 +35,11 @@ members:
     role: Member
     email: Ali.Esmail03@eng-st.cu.edu.eg
     linkedin: https://www.linkedin.com/in/ali-zayan-b98239264?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+  - name: Yara Hisham
+    image: /img/snapchat-1890188244-yara-mahrous-1-1-.jpg
+    role: Member
+    email: yara.mahrous01@eng-st.cu.edu.eg
+    linkedin: https://www.linkedin.com/in/yaramahrous61/
 ---
 **Cairo University Eco Racing Team - Autonomous Development Sub Team**
 
