Update Team Members “06-14-46-”

--- a/v1/content/team-members/06-14-46-.md
+++ b/v1/content/team-members/06-14-46-.md
@@ -21,6 +21,27 @@ members:
     email: moustafa.ahmed7123@gmail.com
     linkedin: https://www.linkedin.com/in/moustafa-ahmed-364a57207/
     facebook: https://www.facebook.com/Moustafa.Ahmed.01/
+  - name: "Ahmed Gamal Ismail Noureddine "
+    image: /img/img-20230304-wa0026-2-ahmed-noureddine-1-.jpg
+    role: Member
+    email: ahmed.noureddine02@eng-st.cu.edu.eg
+    linkedin: https://www.linkedin.com/in/ahmedgamal74
+    facebook: https://m.facebook.com/profile.php/?id=100006018391625
+  - name: Mostafa Yossry Fouad Elgharbawy
+    image: /img/img_20220531_132052-mostafa-elgharbawy-1-.jpg
+    role: Member
+  - name: Khaled Waleed Samir Metwally
+    image: /img/img_02550-khaled-waleed-1-.jpg
+    role: Member
+    email: khaledwaleed42069@gmail.com
+    linkedin: https://www.linkedin.com/in/khaled-waleed-036205228
+    facebook: https://www.facebook.com/khaled.waleed.946
+  - name: Mohamed Ahmed Ibrahim Sobh
+    image: /img/mohamed-sobh-mohamed-sobh.jpg
+    role: Member
+    email: mohamed.sobh032@gmail.com
+    linkedin: www.linkedin.com/in/mohamed-sobh-82b6bb250
+    facebook: https://www.facebook.com/profile.php?id=100003543010489
 ---
 **Cairo University Eco Racing Team - Autonomous Embedded Systems Sub Team**
 
