Update Team Members “06-15-04-”

--- a/v1/content/team-members/06-15-04-.md
+++ b/v1/content/team-members/06-15-04-.md
@@ -16,5 +16,11 @@ members:
     email: habiba8.magdy@gmail.com
     linkedin: https://www.linkedin.com/in/habiba-ammar-39a617258?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
     image: /img/img-20230707-wa0010-habiba-ammar.jpg
+  - name: "Farida Mostafa Mohamed "
+    image: /img/img_20231114_235113_edit_8748910628352-farida-mostafa-1-.jpg
+    role: Member
+    email: Farida.mostafa6666@gmail.com
+    linkedin: https://www.linkedin.com/in/farida-mostafa-
+    facebook: https://www.facebook.com/profile.php?id=100009339684344&mibextid=ZbWKwL
 ---
 \-﻿-
