Update Team Members “06-15-02-”

--- a/v1/content/team-members/06-15-02-.md
+++ b/v1/content/team-members/06-15-02-.md
@@ -32,6 +32,22 @@ members:
   - name: Dina waleed Abd El Haleem Refay
     role: Member
     image: /img/img_9411-dina-refay.jpeg
+  - role: Member
+    name: Abdelrhman Muhammad
+    image: /img/img_20230902_004623_647-abdulrahman-rahman-1-.jpg
+    email: podydata@gmail.com
+    linkedin: https://www.linkedin.com/in/abdelrhman-muhammad-452a48226
+    facebook: https://www.facebook.com/podydata?mibextid=ZbWKwL
+  - name: Ibrahim Samy
+    image: /img/hima-ibrahim-imam.jpg
+    role: Member
+    email: Ibrahim.Samyy04@gmail.com
+    linkedin: https://www.linkedin.com/in/ibrahimsamyy04
+    facebook: https://www.facebook.com/himaa.emaam.22
+  - name: "Kenzy Magdy Mohamed "
+    image: /img/kenzy-kenzy-magdy-1-.jpg
+    role: Member
+    email: kenzy.magdy.soliman@gmail.com
 ---
 **Cairo University Eco Racing Team - Communication and Public Relations Sub Teams**
 
