Update Team Members “06-14-39-”

--- a/v1/content/team-members/06-14-39-.md
+++ b/v1/content/team-members/06-14-39-.md
@@ -7,6 +7,10 @@ head:
   email: mohabmohamedmohamedzaghloul@gmail.com
   linkedin: https://www.linkedin.com/in/mohab-zaghloul-68778a1a7/
   github: https://github.com/Mohabz-911
+members:
+  - name: Ziad Shawkat
+    image: /img/img_20220501_003804_492-ziad-shawkat.jpg
+    role: Member
 ---
 **Cairo University Eco Racing Team - Electric Control Sub Team**
 
