Update Team Members “06-14-33-”

--- a/v1/content/team-members/06-14-33-.md
+++ b/v1/content/team-members/06-14-33-.md
@@ -14,6 +14,15 @@ members:
     linkedin: https://www.linkedin.com/in/manar-mohamed-67a629226?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
     facebook: https://www.facebook.com/profile.php?id=100009239988300&mibextid=gjUFcU
     image: /img/img-20230831-wa0195-manar-mohamed.jpg
+  - name: Nancy motawadea shawky
+    image: /img/img-20230829-wa0148-nancy-ghobrial-1-.jpg
+    email: Nancymotawadea@gmail.com
+    role: Member
+  - name: Alaa Mahmoud Yassin
+    role: Member
+    image: /img/20220729_144421-alaa-saud-1-.jpg
+    email: Alaa.saud02@eng-st.cu.edu.eg
+    linkedin: https://www.linkedin.com/in/alaa-yassin-608699241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
 ---
 **Cairo University Eco Racing Team - Power Transmission Sub Team**
 
