Update Team Members “06-14-37-”

--- a/v1/content/team-members/06-14-37-.md
+++ b/v1/content/team-members/06-14-37-.md
@@ -13,6 +13,11 @@ members:
     role: Member
     linkedin: https://www.linkedin.com/in/alaa-ibrahim-136b40265/
     image: /img/whatsapp-image-2023-11-12-at-10.21.05-pm-alaa-abdul-ghani.jpeg
+  - name: Omnia Atef
+    image: /img/20230518_122438-omnia-hilal-1-1-1-1-.jpg
+    role: Member
+    linkedin: https://www.linkedin.com/in/omnia-atef-helal-5b4b17223?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+    email: omnia.atef712@gmail.com
 ---
 **Cairo University Eco Racing Team - Power Electronics Sub Team**
 
