--- a/v1/content/team-members/06-14-35-.md
+++ b/v1/content/team-members/06-14-35-.md
@@ -14,6 +14,12 @@ members:
     linkedin: http://linkedin.com/in/halla-fathy-955a99211
     facebook: https://www.facebook.com/hala.fathy.969?mibextid=LQQJ4d
     image: /img/c3e1bcc1-7ace-489c-965f-18fd26c6d64c-halla-fathy.jpg
+  - name: Youssef Mohamed Elshamy
+    image: /img/img_7666-youssef-elshamy-1-.jpg
+    role: Member
+    email: Shamyyoussef09@gmail.com
+    linkedin: Youssef elshamy
+    facebook: Yossef shamy
 ---
 **Cairo University Eco Racing Team - Engine Sub Team**
 
