Update Team Members “06-14-46-”

--- a/v1/content/team-members/06-14-46-.md
+++ b/v1/content/team-members/06-14-46-.md
@@ -42,6 +42,12 @@ members:
     email: mohamed.sobh032@gmail.com
     linkedin: www.linkedin.com/in/mohamed-sobh-82b6bb250
     facebook: https://www.facebook.com/profile.php?id=100003543010489
+  - role: Member
+    name: Omar Saad Elgharbawy
+    image: /img/img_7889-omar-saad.jpg
+    email: omarsaadelgharbawy@gmail.com
+    linkedin: https://www.linkedin.com/in/omar-saad-75521119a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+    facebook: https://www.facebook.com/omar.saad.50?mibextid=LQQJ4d
 ---
 **Cairo University Eco Racing Team - Autonomous Embedded Systems Sub Team**
 
