Update Team Members “06-15-02-”

--- a/v1/content/team-members/06-15-02-.md
+++ b/v1/content/team-members/06-15-02-.md
@@ -48,6 +48,12 @@ members:
     image: /img/kenzy-kenzy-magdy-1-.jpg
     role: Member
     email: kenzy.magdy.soliman@gmail.com
+  - name: Malak Waleed Fouad
+    image: /img/img_2974-malak-waleed-1-1-.jpg
+    role: Member
+    email: malakwaleed264@gmail.com
+    linkedin: https://www.linkedin.com/in/malak-waleed-722215241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+    facebook: https://www.facebook.com/malak.waleed.357?mibextid=LQQJ4d
 ---
 **Cairo University Eco Racing Team - Communication and Public Relations Sub Teams**
 
