Update Team Members “06-14-30-”

--- a/v1/content/team-members/06-14-30-.md
+++ b/v1/content/team-members/06-14-30-.md
@@ -41,6 +41,11 @@ members:
     email: midomigo123@gmail.com
     linkedin: https://www.linkedin.com/in/mohamed-magdy-2a3b05166
     facebook: https://www.facebook.com/mido.sun.585/
+  - name: Zeineldein Mohamed Kotb
+    image: /img/zein-zeineldein-kotb-1-.jpg
+    role: Member
+    email: zeineldein2003@gmail.com
+    linkedin: https://www.linkedin.com/in/zeineldein-kotb-77a33a25a?
 ---
 **Cairo University Eco Racing Team - Body and Chassis Sub Team**
 
