Update Team Members “06-14-39-”

--- a/v1/content/team-members/06-14-39-.md
+++ b/v1/content/team-members/06-14-39-.md
@@ -11,6 +11,12 @@ members:
   - name: Ziad Shawkat
     image: /img/img_20220501_003804_492-ziad-shawkat.jpg
     role: Member
+  - name: Abdelrhman Muhammed Fathi
+    image: /img/ana-abdelrhman-muhammed-fathy-ahmed.jpg
+    role: Member
+    email: fathi7911122gmail.com
+    linkedin: https://www.linkedin.com/in/abdelrhman-muhammed-fathi-8a9717253/
+    facebook: abdelrhmanfathi473@yahoo.com
 ---
 **Cairo University Eco Racing Team - Electric Control Sub Team**
 
