Update Team Members “06-14-42-”

--- a/v1/content/team-members/06-14-42-.md
+++ b/v1/content/team-members/06-14-42-.md
@@ -40,6 +40,12 @@ members:
     role: Member
     email: yara.mahrous01@eng-st.cu.edu.eg
     linkedin: https://www.linkedin.com/in/yaramahrous61/
+  - name: Amira Abdelghany
+    image: /img/img_6510-amira-abdelghany-1-1-.jpg
+    role: Member
+    email: amiraabdelghany764@gmail.com
+    linkedin: https://www.linkedin.com/in/amira-abdelghany-2757071b2
+    facebook: https://www.facebook.com/amira.es764?mibextid=LQQJ4d
 ---
 **Cairo University Eco Racing Team - Autonomous Development Sub Team**
 
