Update Team Members “06-14-37-”

--- a/v1/content/team-members/06-14-37-.md
+++ b/v1/content/team-members/06-14-37-.md
@@ -18,6 +18,11 @@ members:
     role: Member
     linkedin: https://www.linkedin.com/in/omnia-atef-helal-5b4b17223?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
     email: omnia.atef712@gmail.com
+  - name: Muhammed yasser muhammed
+    image: /img/1676617782593-mohamed-mostafa.jpeg
+    role: Member
+    email: mohammedkher844@gmail.com
+    linkedin: https://www.linkedin.com/in/mohamed-yasser-0170a1249
 ---
 **Cairo University Eco Racing Team - Power Electronics Sub Team**
 
