Update Team Members “06-14-37-”

--- a/v1/content/team-members/06-14-37-.md
+++ b/v1/content/team-members/06-14-37-.md
@@ -23,6 +23,11 @@ members:
     role: Member
     email: mohammedkher844@gmail.com
     linkedin: https://www.linkedin.com/in/mohamed-yasser-0170a1249
+  - name: Basant Yasser
+    role: Member
+    email: basant.yasserbyb@gmail.com
+    linkedin: https://www.linkedin.com/in/basant-yasser-5a06931ba
+    image: /img/img-20230518-wa0034-basant-mohammed.jpg
 ---
 **Cairo University Eco Racing Team - Power Electronics Sub Team**
 
