Update Team Members “06-14-55-”

--- a/v1/content/team-members/06-14-55-.md
+++ b/v1/content/team-members/06-14-55-.md
@@ -21,6 +21,10 @@ members:
     role: Member
     email: youssefmohsen12@gmail.com
     linkedin: https://www.linkedin.com/in/yousef-mohsen-bbb128221/
+  - name: Ahmed Abdelkareem Abdelaziz Sanad
+    image: /img/ahmed-abdelkareem-abdelaziz-sanad.jpg
+    role: Member
+    email: ahmeda.elgindy3@gmail.com
 ---
 **Cairo University Eco Racing Team - Operations & Manufacturing Sub Team**
 
