Update Team Members “06-15-02-”

--- a/v1/content/team-members/06-15-02-.md
+++ b/v1/content/team-members/06-15-02-.md
@@ -54,6 +54,24 @@ members:
     email: malakwaleed264@gmail.com
     linkedin: https://www.linkedin.com/in/malak-waleed-722215241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
     facebook: https://www.facebook.com/malak.waleed.357?mibextid=LQQJ4d
+  - name: shahd medhat mohamed
+    image: /img/mee-shahd-medhat.jpg
+    role: Member
+    email: shahdmedhatt9@gmail.com
+    linkedin: https://www.linkedin.com/in/shahd-medhat-957a691bb?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app
+  - name: Yousef Suliman
+    image: /img/20230901_185959-youssef-suliman.jpg
+    role: Member
+    email: youssefsuliman3@gmail.com
+    linkedin: https://www.linkedin.com/in/youssef-suliman-105985134?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+  - name: Amira yasser mohammed riad
+    image: /img/amira-yasser.jpg
+    role: Member
+    email: Amiray572@gmail.com
+  - name: "Nouran Maher Mostafa "
+    image: /img/nouran-ahmed.jpg
+    role: Member
+    email: nouranmaher973@gmail.com
 ---
 **Cairo University Eco Racing Team - Communication and Public Relations Sub Teams**
 
