Update Team Members “06-14-42-”

--- a/v1/content/team-members/06-14-42-.md
+++ b/v1/content/team-members/06-14-42-.md
@@ -46,6 +46,12 @@ members:
     email: amiraabdelghany764@gmail.com
     linkedin: https://www.linkedin.com/in/amira-abdelghany-2757071b2
     facebook: https://www.facebook.com/amira.es764?mibextid=LQQJ4d
+  - name: Farida Moukhtar
+    image: /img/dsc_2988-farida-moukhtar.jpg
+    role: Member
+    email: farida.moukhtar03@eng-st.cu.edu.eg
+    linkedin: https://www.linkedin.com/in/farida-moukhtar/
+    facebook: https://web.facebook.com/profile.php?id=100009732034254
 ---
 **Cairo University Eco Racing Team - Autonomous Development Sub Team**
 
