Update Team Members “06-14-21-”

--- a/v1/content/team-members/06-14-21-.md
+++ b/v1/content/team-members/06-14-21-.md
@@ -7,7 +7,18 @@ head:
   email: ahmed.ragab200099@gmail.com
   linkedin: https://www.linkedin.com/in/ahmed-ragab-1b4a911b5
   facebook: https://www.facebook.com/profile.php?id=100003361600722&mibextid=ZbWKwL
-members: []
+members:
+  - name: Moustafa youness
+    image: /img/img_20230126_181026_238-mustafa-younis.jpg
+    role: Member
+    email: moustafayounes18@gmail.com
+    facebook: https://www.facebook.com/profile.php?id=100009028243743&mibextid=ZbWKwL
+  - name: Osama Ashraf
+    image: /img/img_20220630_202556_880-osama-ashraf.jpg
+    role: Member
+    email: "Osamaashraf1970@gmail.com "
+    linkedin: https://www.linkedin.com/in/osama-ashraf-a06770247?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+    facebook: https://www.facebook.com/osama.ashraf.56884?mibextid=ZbWKwL
 ---
 **Cairo University Eco Racing Team - Vehicle Dynamics Sub Team**
 
