--- a/v1/content/team-members/06-14-57-.md
+++ b/v1/content/team-members/06-14-57-.md
@@ -12,6 +12,12 @@ members:
     role: Member
     linkedin: https://www.linkedin.com/in/ziad-aboelkhair/
     image: /img/photo-ziad-aboelkhair.jpg
+  - name: Hazem Alshawadfy Alzorkany
+    image: /img/picsart_10-20-10.05.08-hazem-alzorkany.jpg
+    role: Member
+    email: hazem.alzorkany01@eng-st.cu.edu.eg
+    linkedin: https://www.linkedin.com/in/hazem-alzorkany-61759026a?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+    facebook: https://www.facebook.com/hazem.alshawadfy.7?mibextid=ZbWKwL
 ---
 **Cairo University Eco Racing Team - Planning & Logistics Sub Team**
 
