Update Team Members “06-15-02-”

--- a/v1/content/team-members/06-15-02-.md
+++ b/v1/content/team-members/06-15-02-.md
@@ -72,6 +72,12 @@ members:
     image: /img/nouran-ahmed.jpg
     role: Member
     email: nouranmaher973@gmail.com
+  - name: "Shahd Ebrahim "
+    email: shahdmattar6@gmail.com
+    role: Member
+    linkedin: https://www.linkedin.com/in/shahd-matter-22b159211/
+    facebook: https://www.facebook.com/shahd.mattar.3?mibextid=ZbWKwL
+    image: /img/picsart_02-01-11.58.48-shahd-mattar-1-.jpg
 ---
 **Cairo University Eco Racing Team - Communication and Public Relations Sub Teams**
 
