Update Team Members “06-14-35-”

--- a/v1/content/team-members/06-14-35-.md
+++ b/v1/content/team-members/06-14-35-.md
@@ -20,6 +20,11 @@ members:
     email: Shamyyoussef09@gmail.com
     linkedin: Youssef elshamy
     facebook: Yossef shamy
+  - name: Meriam Tamer
+    role: Member
+    image: /img/whatsapp-image-2023-11-28-at-5.10.36-pm-meriam-hanna.jpeg
+    email: meriam.hannaa@gmail.com
+    linkedin: https://www.linkedin.com/in/meriam-hanna-0341a9209/
 ---
 **Cairo University Eco Racing Team - Engine Sub Team**
 
