Update Team Members “06-14-33-”

--- a/v1/content/team-members/06-14-33-.md
+++ b/v1/content/team-members/06-14-33-.md
@@ -23,6 +23,11 @@ members:
     image: /img/20220729_144421-alaa-saud-1-.jpg
     email: Alaa.saud02@eng-st.cu.edu.eg
     linkedin: https://www.linkedin.com/in/alaa-yassin-608699241?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app
+  - name: "Belal Abdelaziz Mostafa "
+    role: Member
+    image: /img/img_20221017_165001-belal-abdel-aziz.jpg
+    email: belalabdelaziz576@gmail.com
+    linkedin: https://www.linkedin.com/in/belal-abdelaziz-0a3350225/
 ---
 **Cairo University Eco Racing Team - Power Transmission Sub Team**
 
