Update Team Members “06-14-55-”

--- a/v1/content/team-members/06-14-55-.md
+++ b/v1/content/team-members/06-14-55-.md
@@ -25,6 +25,10 @@ members:
     image: /img/ahmed-abdelkareem-abdelaziz-sanad.jpg
     role: Member
     email: ahmeda.elgindy3@gmail.com
+  - name: Menan Elsayed Abdelmonam
+    email: Menan.ahmed98@eng-st.cu.edu.eg
+    role: Member
+    image: /img/img_2446-menan-ahmed.jpg
 ---
 **Cairo University Eco Racing Team - Operations & Manufacturing Sub Team**
 
