Update Team Members “06-14-30-”

--- a/v1/content/team-members/06-14-30-.md
+++ b/v1/content/team-members/06-14-30-.md
@@ -46,6 +46,11 @@ members:
     role: Member
     email: zeineldein2003@gmail.com
     linkedin: https://www.linkedin.com/in/zeineldein-kotb-77a33a25a?
+  - name: Hamad Osama Salah
+    email: Hamaddosamaa@gmail.com
+    role: Member
+    image: /img/img_0483-hamad-elmageed.jpg
+    facebook: https://www.facebook.com/profile.php?id=100083134830832&mibextid=LQQJ4d
 ---
 **Cairo University Eco Racing Team - Body and Chassis Sub Team**
 
